[workspace]
resolver = "3"

members = [
    "crates/*",
    "lust",
]

[workspace.package]
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
rustyline = "17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15"
thiserror = "2"
