[workspace]
resolver = "3"

members = [
    "crates/*",
    "lust",
]

[workspace.package]
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
quote = "1"
proc-macro2 = "1"
rustyline = "18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15"
thiserror = "2"

[workspace.dependencies.syn]
version = "2"
features = ["full", "extra-traits"]
